fixed issue with reading data using JPA

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #In Spring boot 2, database initialization only works for embedded databases (H2, HSQLDB).
 #If you want to use it for other databases, you need to change the
 spring.datasource.initialization-mode=always
-#always
+#TODO: Change to `never` once database is initalized
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.show_sql=true
